--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Print Full Repository Path
-        run: echo "Repository: ${{ github.repository }}"
+        run: 'echo "Repository: ${{ github.repository }}"'
+        shell: bash
+      
       - name: Run workflow using custom action
         uses: ./
         with:
