add a dispatcvhed workflow test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,8 @@ jobs:
         uses: ./
         with:
           token: ${{ secrets.SINGING_STAGE_WORKFLOW_TOKEN }}
-          repository: SingingStage/environments
-          workflow: update-integration.yml
+          repository: ${{ github.repository }}
+          workflow: dispatched-workflow.yml
           ref: main
           inputs: |
             {
