--- a/.github/workflows/dispatched-workflow.yml
+++ b/.github/workflows/dispatched-workflow.yml
@@ -6,18 +6,14 @@ on:
         description: "Allow major changes"
         required: true
         default: false
-      singing_stage_commit:
-        description: "Commit hash to process"
+        uuid:
+        description: "UUID to identify workflow run"
         required: true
 
 jobs:
   test-dispatch:
     runs-on: ubuntu-latest
     steps:
-      - name: Print Inputs
-        run: |
-          echo "Allow Major Change: ${{ github.event.inputs.allow_major_change }}"
-          echo "Singing Stage Commit: ${{ github.event.inputs.singing_stage_commit }}"
-
-      - name: Debug GitHub Context
-        run: echo "${{ toJson(github) }}"
+      - name: Print outputs
+        run: echo ${{toJson(inputs)}}
+        shell: bash
