--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,5 +24,5 @@ jobs:
           inputs: |
             {
               "allow_major_change": false,
-              "singing-stage-commit": "acae20097b5893888028f6b95897712049b79e34"
+              "uuid": "${{ github.sha }}"
             }
