--- a/.github/workflows/dispatched-workflow.yml
+++ b/.github/workflows/dispatched-workflow.yml
@@ -3,6 +3,7 @@ on:
   workflow_dispatch:
     inputs:
         uuid:
+        type: string
         description: "UUID to identify workflow run"
         required: true
 
