--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "index.js",
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "@octokit/rest": "^20.0.0",
-    "node-fetch": "^2.7.0"
+    "@octokit/rest": "^20.0.0"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.36.1"
   },
   "scripts": {
-    "build": "ncc build index.js",
-    "debug": "ncc build debug.js"
+    "build": "ncc build index.js -o dist",
+    "debug": "ncc build debug.js -o dist"
   }
+  
 }
