--- a/action.yml
+++ b/action.yml
@@ -22,9 +22,9 @@ inputs:
     required: false
     default: '11'
   interval:
-    description: 'Polling interval in seconds. Default is 1 seconds.'
+    description: 'Polling interval in seconds.'
     required: false
-    default: '1'
+    default: '2'
   timeout:
     description: 'Timeout for polling in seconds. Default is 60 seconds (1 minutes).'
     required: false
