--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,20 +43,21 @@ jobs:
               "uuid": "${{ github.sha }}-2"
             }
   validate-workflow-status:
-    runs-on: ubuntu-latest
-    needs:
-      - run-slow-succeeding-workflow
-      - run-fast-failing-workflow
-    if: always()  # Runs even if dependencies failed
+  runs-on: ubuntu-latest
+  needs:
+    - run-slow-succeeding-workflow
+    - run-fast-failing-workflow
+  if: always()  # Ensures this job runs even if dependencies fail
+  steps:
+    - name: Check Workflow Status from Job Results
+      run: |
+        echo "Slow workflow result: ${{ needs.run-slow-succeeding-workflow.result }}"
+        echo "Fast workflow result: ${{ needs.run-fast-failing-workflow.result }}"
 
-    steps:
-      - name: Check Workflow Status
-        run: |
-          if [[ "${{ needs.run-slow-succeeding-workflow.result }}" == "success" && "${{ needs.run-fast-failing-workflow.result }}" == "failure" ]]; then
-            echo "Both conditions are met: succeeding workflow succeeded, failing workflow failed."
-            exit 0
-          else
-            echo "Conditions not met. Marking workflow as failed."
-            exit 1
-          fi
-        shell: bash
+        if [[ "${{ needs.run-slow-succeeding-workflow.result }}" == "success" && "${{ needs.run-fast-failing-workflow.result }}" == "failure" ]]; then
+          echo "✅ Conditions met: Succeeding job succeeded, failing job failed."
+          exit 0  # Mark the workflow as successful
+        else
+          echo "❌ Conditions NOT met. Marking workflow as failed."
+          exit 1  # Explicitly fail the workflow
+        fi
