--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -42,29 +42,13 @@ jobs:
             {
               "uuid": "${{ github.sha }}-2"
             }
-  validate-workflow-status:
-    runs-on: ubuntu-latest
-    needs:
-      - run-slow-succeeding-workflow
-      - run-fast-failing-workflow
-    if: always()  # Ensures this job runs even if dependencies fail
-    steps:
-      - name: Check Workflow Status from Job Results
-        shell: bash
+
+      - name: Validate and Override Workflow Status
         run: |
-          SUCCEEDING_RESULT="${{ needs.run-slow-succeeding-workflow.result }}"
-          FAILING_RESULT="${{ needs.run-fast-failing-workflow.result }}"
-
-          echo "Succeeding workflow result: $SUCCEEDING_RESULT"
-          echo "Failing workflow result: $FAILING_RESULT"
-
-          if [[ "$SUCCEEDING_RESULT" == "success" && "$FAILING_RESULT" == "failure" ]]; then
+          if [[ "$status" == "failure" ]]; then
             echo "✅ Expected failure detected. Marking workflow as successful."
-            echo "✅ Validation job follows the workflow status."; exit 0
-          elif [[ "$SUCCEEDING_RESULT" == "success" && "$FAILING_RESULT" == "success" ]]; then
-            echo "❌ Unexpected success! The failing job should have failed."
-            exit 1  # Unexpected success should fail the workflow
+            exit 0  # Overrides workflow failure
           else
-            echo "❌ Conditions NOT met. Marking workflow as failed."
-            echo "❌ Validation job follows the workflow failure."; exit 1
+            echo "❌ Unexpected failure. Keeping failure status."
+            exit 1
           fi
